[project]
name = "tuz-fluxklein-toolkit"
description = "Architecture-aware LoRA loader for FLUX.2 Klein in ComfyUI with automatic per-layer strength calibration."
version = "1.0.0"
license = {file = "LICENSE"} 
dependencies = [
    "opencv-python-headless>=4.10",
]
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]


[project.urls]
Repository = "https://github.com/TuZZiL/tuz-fluxklein-toolkit"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/TuZZiL/tuz-fluxklein-toolkit/wiki"
"Bug Tracker" = "https://github.com/TuZZiL/tuz-fluxklein-toolkit/issues"

[tool.comfy]
PublisherId = "capitan01r"
DisplayName = "TUZ FluxKlein Toolkit"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility
